Support 'rings' env conf