@@ -1,7 +1,5 @@
 #!/bin/bash
 
-jfrOpts="-XX:+UnlockCommercialFeatures -XX:+FlightRecorder -XX:FlightRecorderOptions=defaultrecording=true,dumponexit=true"
-
 findCpuList() {
     local cpuCount=$( \
         cat "/proc/cpuinfo" | \
@@ -11,11 +9,11 @@ findCpuList() {
     echo "0-$[$cpuCount-1]"
 }
 
-
 set -e
 
 [ -z "$workerCount" ] && workerCount=503
 [ -z "$ringSize" ] && ringSize=1000000
+[ -z "$rings" ] && rings=2
 [ -z "$quasarAgentLocation" ] && quasarAgentLocation=$HOME/.m2/repository/co/paralleluniverse/quasar-core/0.6.3-SNAPSHOT/quasar-core-0.6.3-SNAPSHOT-jdk8.jar
 [ -z "$bytemanAgentLocation" ] && bytemanAgentLocation="$HOME/.m2/repository/org/jboss/byteman/byteman/2.2.1/byteman-2.2.1.jar"
 [ -z "$warmupIters" ] && warmupIters=5
@@ -31,6 +29,7 @@ if [ "$1" = "-h" -o "$1" = "--help" ]; then
     echo "Available environment parameters (with defaults):"
     echo "    workerCount             ($workerCount)"
     echo "    ringSize                ($ringSize)"
+    echo "    rings                   ($rings)"
     echo "    quasarAgentLocation     ($quasarAgentLocation)"
     echo "    bytemanAgentLocation    ($bytemanAgentLocation)"
     echo "    warmupIters             ($warmupIters)"
@@ -54,11 +53,9 @@ if [ ! -e "$quasarAgentLocation" ]; then
     exit 1
 fi
 
-# -Dorg.jboss.byteman.verbose
-# -Dco.paralleluniverse.fiber.verifyInstrumentation=true
-cmd="taskset -c $cpuList $JAVA_HOME/bin/java -Djmh.perfasm.hotThreshold=0.05 -Djmh.perfasm.tooBigThreshold=5000 -Djmh.perfasm.events=cycles,instructions,cache-misses -jar target/ring-bench.jar\
- -jvmArgsAppend \"-Xbootclasspath/p:$bytemanAgentLocation $jfrOpts -Dorg.jboss.byteman.transform.all -DworkerCount=$workerCount -DringSize=$ringSize -javaagent:$quasarAgentLocation -javaagent:$bytemanAgentLocation=script:script.btm\"\
- -wi $warmupIters -i $iters -bm $stat -tu $unit -f $forks -prof perfasm \"$benchRegexp\""
+cmd="taskset -c $cpuList $JAVA_HOME/bin/java -server -XX:+TieredCompilation -XX:+AggressiveOpts -jar target/ring-bench.jar\
+ -jvmArgsAppend \"-server -XX:+TieredCompilation -XX:+AggressiveOpts -DworkerCount=$workerCount -DringSize=$ringSize -Drings=$rings -DfiberParallelism=$rings -javaagent:$quasarAgentLocation\"\
+ -wi $warmupIters -i $iters -bm $stat -tu $unit -f $forks \"$benchRegexp\""
 
 echo "$cmd"
 eval "$cmd"
